tests/errors/intrinsics_04.f90
program intrinsics_04
    print *, iand(1, 1_8)
end program